# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/: pyproject.toml
viikko1/nhl-statistics-1/src/: .index.py.swn  .index.py.swo  .index.py.swp  .statistics.py.swn  .statistics.py.swo  .statistics.py.swp  index.py  player.py  player_reader.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko1/riippuvuuksien-injektointi-1/: pyproject.toml
viikko1/riippuvuuksien-injektointi-1/src/: index.py  konsoli_io.py  laskin.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: index.py  project.py  project_reader.py
viikko2/varasto/: .pylintrc
viikko2/verkkokauppa-1/: pyproject.toml
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py  viitegeneraattori.py
viikko3/hello-robot/: pyproject.toml
viikko3/hello-robot/src/: CounterLibrary.py  counter.py
viikko3/hello-robot/src/tests/: increase_counter.robot  resource.robot
viikko3/login-robot/: pyproject.toml
viikko3/nhl-reader/: pyproject.toml
viikko3/web-login-robot/: .gitignore  pyproject.toml
viikko3/web-login-robot/src/: AppLibrary.py  app.py
viikko3/web-login-robot/src/repositories/: user_repository.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/templates/: index.html  layout.html  login.html  ohtu.html  register.html  welcome.html
viikko3/web-login-robot/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/int-joukko/: pyproject.toml
viikko4/maksukortti-mock/: pyproject.toml
viikko4/mock-demo/: pyproject.toml
viikko4/tdd-ostoskori/: .gitignore  pyproject.toml
viikko4/tdd-ostoskori/src/: .ostoskori.py.swo  .ostoskori.py.swp  index.py  ostos.py  ostoskori.py  tuote.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: pyproject.toml
viikko5/laskin/: .gitignore  pyproject.toml
viikko5/tennis/: pyproject.toml
viikko6/: PULL.md
viikko6/query-language/: pyproject.toml
viikko7/kivi-paperi-sakset/: pyproject.toml
(+53 files in other folders)
