[tool.poetry]
name = "nhl-statistics-1"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalleilv@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
