[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["astranero <esa.taheresa@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
jsonpickle = "1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
